IndexedDB: Remove DOMStringList special case for transaction()

Now that sequence conversion handles iterables, we no longer need
a special case for IDBDatabase's transaction() method which takes
a union of (DOMString or sequence<DOMString>) to accept DOMStringList.
The method signature now matches the spec.

BUG=674593
TEST=storage/indexeddb/transaction-basics.html

Review-Url: https://codereview.chromium.org/2840893002
Cr-Commit-Position: refs/heads/master@{#467188}

Former-commit-id: 0626510c113d95afa8aa15666a81bb25fc7fbda3